# zazencodes-season-3

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
src/agent-identity-introduction/: README.md  connect_google_drive.py  google_drive_server.py  pyproject.toml
src/agent-identity-introduction/docs/: mcp-oauth-flow.md
src/agent-md-effectiveness/: README.md
src/claude-code-devtool-kanban-board/: .gitignore  README.md  package-lock.json  package.json
src/claude-code-devtool-kanban-board/client/: index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
src/claude-code-devtool-kanban-board/client/src/: App.tsx  index.css
src/claude-code-devtool-kanban-board/docs/plan/: kanban-board.md
src/claude-code-devtool-kanban-board/server/: package.json  tsconfig.json
src/claude-code-devtool-kanban-board/server/data/: board.json.migrated  db.json
src/claude-code-devtool-kanban-board/server/src/: db.ts  index.ts  types.ts
src/cross-platform-agent-skills/: README.md
src/cross-platform-agent-skills/1-init-agents-md-demo/claude-arbiter-mcp-evals/: AGENTS.md  CHANGELOG.md  CLAUDE.md  pyproject.toml
src/cross-platform-agent-skills/1-init-agents-md-demo/claude-arbiter-mcp-evals/arbiter/: cli.py
src/cross-platform-agent-skills/1-init-agents-md-demo/claude-arbiter-mcp-evals/arbiter/assets/: example_evals.json
src/cross-platform-agent-skills/1-init-agents-md-demo/codex-arbiter-mcp-evals/: AGENTS.md  CLAUDE.md  README.md  conftest.py
src/cross-platform-agent-skills/2-movie-poster-demo/: README.md
src/cross-platform-agent-skills/2-movie-poster-demo/4-copilot-arbiter-mcp-evals/: .gitignore
src/cross-platform-agent-skills/2-movie-poster-demo/5-antigravity-arbiter-mcp-evals/: LICENSE
src/cross-platform-agent-skills/skills/init-agents-md/: SKILL.md
src/dry-run-workflow-for-agent-skills/calculator/: Dockerfile  README.md  main.py
src/dry-run-workflow-for-agent-skills/dockerize-example/: .gitignore  README.md  main.py
src/dry-run-workflow-for-agent-skills/fs-cleanup-example/: README.md  make_demo.py  make_vegan_icecream_demo.py
src/gemma-4-local-guide/: gemma_audio_completion.py  gemma_document_completion.py  gemma_image_completion.py  moby.txt
src/google-ai-studio-firebase/: README.md
src/hermes-hostinger-webui-memory/: GENERIC-HERMES-VPS-SETUP.md  HOSTINGER-HERMES-SETUP.md  README.md
src/interoperable-agent-skills/: README.md
src/literature-review-consensus-mcp/: literature_review.tex  literature_review_images.json  literature_review_images.tex
src/pi-agent-fleet/: AGENTS.md  README.md  watch_sessions.py
src/pi-agent-fleet/agents/ig-carousel-agent/: brain.md  generate_image.py  package-lock.json  package.json
src/software-engineers-using-coding-agents/vegan-bars/: CLAUDE.md  README.md  digest.txt  vegan-bars.html
(+69 files in other folders)
